# bumot

./: CMakeLists.txt  Jamfile  Makefile.common  Makefile.lin  Makefile.win  README.md  Speedwords.dict  bumot.cpp  bumot.exe.manifest  bumot_rs.rc  bumotdb.cpp  bumotdb.db  bumotdb.hpp  bumotstrings.hpp  data_connection.cpp  data_connection.hpp  speedwords.sql  speedwords_schema.sql  speedwords_to_sql.py
bm2/: Makefile  bm2.c  bm2_db.c  bm2_db.h  logging.c  logging.h
